# MikuMikuLoader

./: Cargo.toml  MikuMiku.toml  README.md  build.rs  injections-ab.toml  injections-abinfo.toml  injections.toml  sekai-injector.toml
.github/workflows/: rust.yml
python/: story_to_assetbundle.py
src/: assetbundle.rs  main.rs  mods.rs  routes.rs  scenario.rs  utils.rs
static/: certificate-gen.html  custom-story.html  index.html  mod-manager.html  server-status.html
static/css/: style.css
static/js/: certificate-gen.js  custom-story.js  mod-manager.js  server-status.js
