[package]
name = "MikuMikuLoader"
version = "0.1.1"
edition = "2024"
license = "GPL-3.0-or-later"

[dependencies]
log = "0.4.27"
serde = "1.0.226"
toml = "0.9.5"
sekai_injector = { git = "https://github.com/timothyhay256/Sekai-Injector.git" }
colored = "3.0.0"
tokio = "1.45.0"
axum = "0.8.4"
axum-server = "0.7.2"
tower-http = { version = "0.6.5", features = ["fs"] }
hyper-rustls = "0.27.5"
hyper-util = "0.1.11"
serde_json = "1.0.140"
local-ip-address = "0.6.5"
gumdrop = "0.8.1"
notify-rust = "4.11.7"
tracing-subscriber = "0.3.19"
tracing-appender = "0.2.3"
webbrowser = "1.0.5"
ansi_term = "0.12.1"
rust-embed = "8.7.2"
mime_guess = "2.0.5"
regex = "1.11.1"
reqwest = "0.12.19"
futures = "0.3.31"
walkdir = "2.5.0"
simple-dns-server = { git = "https://github.com/timothyhay256/simple-dns" }
pyo3 = { version = "0.26.0", features = ["auto-initialize", "serde"] }
axum-extra = "0.10.1"
anyhow = "1.0.98"
rmp-serde = "1.3.0"
aes = "0.8.4"
cbc = "0.1.2"
block-padding = "0.3.3"
chrono = "0.4.41"
rand = "0.9.2"
pythonize = "0.26.0"
indexmap = { version = "2.11.0", features = ["serde"] }
image = "0.25.6"
base64 = "0.22.1"
tempfile = "3.21.0"

[build-dependencies]
serde = { version = "1.0.226", features = ["derive"] }
serde_json = "1.0.140"

[lints.rust]
unsafe_code = "forbid"
